# openfov

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md  RELEASE_NOTES_v0.1.0.md
docs/logo-concepts/: index.html
installer/: build_installer.ps1  openfov.iss
installer/redist/: .gitignore
npclient-vendor/: LICENSE-NPCLIENT.txt  NPClient.def  README.md  build.ps1  npclient.c  trackir.c
resources/ui/: openfov.qss
src/openfov/: __init__.py  __main__.py
src/openfov/filtering/: __init__.py  dead_zone.py  median.py  one_euro.py  pipeline.py
src/openfov/games/: __init__.py  base.py  iracing.py  registry.py
src/openfov/mapping/: __init__.py  axis_mapper.py  curve.py  presets.py
src/openfov/output/: __init__.py  freetrack.py  manager.py  npclient_bootstrap.py  trackir_shim.py  udp_json.py
src/openfov/persistence/: __init__.py  config.py  env.py  paths.py  profiles.py
src/openfov/runtime/: __init__.py  autostart.py  camera.py  game_watcher.py  hotkey.py  pipeline.py  single_instance.py
src/openfov/tracker/: __init__.py  base.py  debug_tracker.py  mediapipe_tracker.py
src/openfov/ui/: __init__.py  axis_panel.py  (+13 more)
tests/: test_autostart.py  test_axis_mapper.py  test_curve.py  test_curve_editor.py  test_dead_zone.py  test_env_config.py  test_filter_chain.py  test_filter_panel.py  test_freetrack_struct.py  test_games.py  test_hotkey_widget.py  test_median_filter.py  test_mediapipe_tracker.py  test_npclient_bootstrap.py  test_one_euro.py  test_output_manager.py  test_p5_fixes.py  test_perf_config.py  test_persistence.py  test_phase5_smoke.py  test_pipeline_integration.py  test_pose_widget.py  test_trackir_shim.py  test_udp_json.py  test_ui_smoke.py
tools/: build_icon.py  build_social_preview.py  generate_icon.py  generate_smartscreen_mockup.py
winget-pkgs-template/: README.md  epalosh.OpenFOV.installer.yaml  epalosh.OpenFOV.locale.en-US.yaml  epalosh.OpenFOV.yaml
