[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfov"
version = "0.2.0"
description = "Webcam head tracking for iRacing and other sim/flight games."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpenFOV Contributors" }]
keywords = ["head-tracking", "iracing", "freetrack", "trackir", "webcam", "sim-racing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "PySide6>=6.6",
    "mediapipe>=0.10.14",
    "opencv-python>=4.9",
    "numpy>=1.26,<2.0",
    "psutil>=5.9",
    "pynput>=1.7",
    "cv2-enumerate-cameras>=1.1",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
]
build = [
    "nuitka>=2.7",
    "zstandard",
    "ordered-set",
]

[project.urls]
Homepage = "https://github.com/epalosh/openfov"
Repository = "https://github.com/epalosh/openfov"
Issues = "https://github.com/epalosh/openfov/issues"

[project.gui-scripts]
openfov = "openfov.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openfov = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
